abstract class AbstractShapeFactory {
    public abstract Shape createCircle();
    public abstract Shape createSquare();
    public abstract Shape createRectangle();
}