class Circle extends Shape {
    @Override
    public String draw() {
        return "Drawing a Circle";
    }
}